More attempts to fix body size on mobile

--- a/timer.css
+++ b/timer.css
@@ -670,7 +670,7 @@ button {
 }
 
 @media screen and (max-width: 420px) {
-  body {all: initial;}
+  body {all: initial; overflow-y: hide;}
   #sesname {width: 48vw;}
   #sescrip {width: 48vw;}
   #seesescrip {width: 58vw;}
